# lmtoolbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  update_requirements.py
.ci/: bundle_guard.py  changelog-notes  gate
.github/workflows/: lint.yml  release.yml  tests.yml
changelog.d/: 20240731_072009_sderev_HEAD.md  20240804_154220_sderev.md  20240820_021510_sderev.md  scriv.ini
changelog.d/templates/: fragment.md.j2
llm_toolbox/: cli.py
llm_toolbox/tools/templates/: commitgen.yaml  critique.yaml  define.yaml  explain.yaml  lessonize.yaml  life.yaml  pathlearner.yaml  proofread.yaml  study.yaml  summarize.yaml  teachlib.yaml  thesaurus.yaml  translate.yaml
lmtoolbox/: cli.py  video_summarization.py
lmtoolbox/tools/templates/: cheermeup.yaml  codereview.yaml  explain.yaml  lessonize.yaml  life.yaml  teachlib.yaml  translate.yaml  video_summarization.yaml
prompt-templates/: README.md
prompt_templates/tools/: cheermeup.yaml  codereview.yaml  commitgen.yaml  critique.yaml  define.yaml  lessonize.yaml  proofread.yaml  study.yaml
tests/: test_bundle_guard.py  video_summarization_test.py
tools/define/: README.md  define
tools/lmt/: README.md
tools/proofread/: README.md  proofread
tools/shellgenius/: README.md
tools/thesaurus/: README.md  thesaurus
tools/translate/: README.md  translate
tools/vocabmaster/: README.md
